# serabis

./: .gitignore  .yo-rc.json  Cargo.toml  README.md  Vagrantfile  bower.json  etc_serapis  http  index.html  index.js  load  netstats  package.json
agent/: Cargo.toml  README.md
agent-installer/: README.md  installer.sh  plugins  serabis_agent
agent-plugins/: context_switches.plugin  disk_space  disk_space.plugin  iptables  iptables.plugin  load.plugin  memory  memory.plugin  netstats  netstats.plugin  network_connection_states  network_connection_states.plugin  network_open_ports  network_open_ports.plugin  process_list  process_list.plugin
agent/src/: cache_poller.rs  client.rs  config.rs  macros.rs  main.rs  metric.rs  plugin.rs
agent/src/config/: agent.rs  loader.rs  mod.rs  plugin.rs
alerter/: Cargo.toml
alerter/src/: db.rs  error.rs  main.rs
api/: README.md  cluster.js  deploy.toml  index.js  package.json
condition-checker/: Cargo.toml
condition-checker/src/: db.rs  error.rs  main.rs
condition-checker/src/tables/: accounts.rs  agents.rs  conditions.rs  mod.rs
config/: config.json
etc_serapis/: monitor.toml
frontend/: README.txt  bower.json  index.html  tsconfig.json  tsd.json
js/: app.js
middlewares/: cors.js
migrations/: 20160309215119-add-accounts.js
models/: database.js
monitor/: Cargo.toml  README.md
monitor-plugins/: context_switches  disk_space.plugin  load.plugin  memory  memory.plugin  netstats  netstats.plugin
monitor/src/: config.rs  main.rs  plugin.rs
monitor/src/config/: mod.rs  monitor.rs  worker.rs
rust-crates/config-loader/: Cargo.toml
rust-crates/config-loader/src/: lib.rs  loader.rs
src/: client.rs  macros.rs  main.rs  plugin.rs  server.rs  worker.rs
tools/: README.md  cpanfile  deploy
vagrant/: setup.sh
(+66 files in other folders)
