[package]
name = "serapis-agent"
version = "0.1.0"
authors = ["Mark Ellis <m@rkellis.com>"]

[dependencies]
log = "0.3"
clippy = { version = "0.0", optional = true }
hyper = "0.7"
rand = "0.3"
env_logger = "0.3"
time = "0.1"
mime = "0.1"
pine = "0.1"
serde = "0.7"
serde_json = "0.7"
serde_macros = "0.7"
toml = { version = "0.1", default-features = false, features = ["serde"] }
quick-error = '1.1'
config-loader = { path = "../rust-crates/config-loader" }
eventual = '0.1'

[features]
default=[]
short_splay=[]
client_cache_tmp=[]
