[package]
name = "condition-checker"
version = "0.1.0"
authors = ["Graeme Lawton <graeme@la.wton.email>"]

[dependencies]
postgres = "0.11"
quick-error = "1.1"
clippy = { version = "0.0", optional = true } 
log = "0.3"
env_logger = "0.3"
amqp = "0.0"
config-loader = { path = "../rust-crates/config-loader" }
serde = "0.7"
serde_macros = "0.7"
serde_json = "0.7"
r2d2 = "0.7"
r2d2_postgres = "0.10"

[features]
default=[]

