[package]
name = "config-loader"
version = "0.1.0"
authors = ["Graeme Lawton <graeme@la.wton.email>"]

[dependencies]
toml = { version = "0.1", default-features = false, features = ["serde"] }
clippy = { version = "0.0", optional = true }
quick-error = "1.1"
serde = "0.7"
serde_macros = "0.7"

[features]
default=[]
